# raspberry-pi-pico-misc

./: .env.example  .gitignore  .gitmodules  DebugProbe.md  README.md
docs/grove/: README.md
docs/ov5642/: ArduCAM_Software_Application_Note.docx  README.md
files/: Makefile
harry-fairhead/: README.md
lecture/: README.md
micropython/: README.md
micropython/i2c-lcd/: README.md  i2cLCD.py  loggingTempteratures.py  printPI.py  printTemperatureI2Clcd.PY
modules/hdmi/: README.md
modules/hdmi/Pico-HDMI-board/software/apps/bad_apple/: main.c
modules/hdmi/Pico-HDMI-board/software/apps/christmas_snowflakes/: main.c
modules/hdmi/Pico-HDMI-board/software/assets/: wikimedia_christmas_tree_in_field_320x240_rgb565.h
pico-pio/: README.md
pico-tutorials/: README.md
pico-tutorials/blink/: CMakeLists.txt  blink.c  flash.sh
pico-tutorials/freertos_blink/: CMakeLists.txt  flash.sh
pico-tutorials/freertos_part02/src/: main.c
pico-tutorials/freertos_part03/src/: main.c
pico-tutorials/freertos_part04/src/: FreeRTOSConfig.h  main.c
pico-tutorials/freertos_part05/src/: CMakeLists.txt  main.c
pico-tutorials/freertos_part06/src/: FreeRTOSConfig.h  main.c
pico-tutorials/freertos_part06_2/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
pico-tutorials/i2c_bno055/: CMakeLists.txt  i2c_bno055.c
pico-tutorials/multicore/: CMakeLists.txt  README.md  multicore.c
pico-tutorials/serial/: CMakeLists.txt  serial.c
pico-tutorials/serial_input/: CMakeLists.txt  serial_input.c
pico-tutorials/tempsensor/: CMakeLists.txt  tempsensor.c
(+10 files in other folders)
